--- a/PHP & HTML/index.html
+++ b/PHP & HTML/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>  
 <html>    
 	<head>  
-		<link type="text/css" rel="stylesheet" href="css/style.css"/>           
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">          
 		<!--Let browser know website is optimized for mobile-->           
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>     
 	</head>    
@@ -14,7 +14,8 @@
 			height:400px; overflow-y:scroll; border-left:2px silver solid;"></div>
 		</div>             
 		</div>      
-	<!--Import jQuery before materialize.js-->        
+	<script 
+	src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script type='text/javascript' 
